# custom-simple-salesforce

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: deploy-docs.yml  mkdocs.yaml  mkdocs.yml
docs/: index.md
docs/reference/: bulk-job.md  bulk.md  client.md  types.md
reference/bulk/: index.html
reference/bulk-job/: index.html
reference/client/: index.html
reference/types/: index.html
sample/: bulk.py  connect.py  sampale.py
script/: aws-Layer-build.sh
search/: search_index.json
src/custom_simple_salesforce/: __init__.py  api.py  bulk.py  bulk_job.py  client.py  types.py
