[project]
name = "custom-simple-salesforce"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "seiji-kawaharajo", email = "seiji.kawaharajo@sol-tech.co.jp" },
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "simple-salesforce>=1.12.9",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "griffe-pydantic>=1.1.6",
    "mkdocs>=1.6.1",
    "mkdocs-i18n>=0.4.6",
    "mkdocs-material>=9.6.18",
    "mkdocstrings-python>=1.18.2",
    "mypy>=1.17.1",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "pymdown-extensions>=10.16.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.10",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
# ignore = ["D203", "D213", "TD001", "TD002", "TD003", "D4"]
unfixable = []

fixable = ["ALL"]

exclude = [".git", "__pycache__", "venv", "docs", "dist", "build"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["EXE002"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["examples/.*"]
