[project]
name = "custom-simple-salesforce"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "seiji-kawaharajo", email = "seiji.kawaharajo@sol-tech.co.jp" },
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "simple-salesforce>=1.12.9",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "griffe-pydantic>=1.1.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings-python>=1.18.2",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pymdown-extensions>=10.16.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EXE002", "E501", "D203", "D213", "D415"]
unfixable = []

fixable = ["ALL"]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    "docs",
    "site",
    "dist",
    "build",
    ".pytest_cache",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
